src/test/ui/bad/bad-const-type.stderr
error[E0308]: mismatched types
  --> $DIR/bad-const-type.rs:1:20
   |
LL | static i: String = 10;
   |                    ^^
   |                    |
   |                    expected struct `std::string::String`, found integer
   |                    help: try using a conversion method: `10.to_string()`
   |
   = note: expected type `std::string::String`
              found type `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
